--- a/MedidoresWeb/MedidoresWeb/Web.config
+++ b/MedidoresWeb/MedidoresWeb/Web.config
@@ -25,4 +25,8 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
+  <connectionStrings>
+    <add name="Medidores_dbEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=Medidores_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
 </configuration>
